--- a/Dotnet-desk-project/appsettings.json
+++ b/Dotnet-desk-project/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "Conn": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=DotnetAppp;Integrated Security=True" }
 }
